@@ -14,7 +14,7 @@ importFrom(grDevices, rainbow)
 importFrom(grid, gpar, grid.lines, grid.newpage, grid.polygon,
            grid.segments, grid.text, pushViewport, seekViewport, unit,
            viewport, vpList, vpTree, plotViewport, grid.grill, upViewport,
-           grid.points, popViewport, grid.rect)
+           grid.points, popViewport, grid.rect, textGrob, grid.draw)
 
 importFrom(lattice, panel.abline, panel.dotplot, panel.segments,
            trellis.par.set, xyplot)
